--- a/css/styles.css
+++ b/css/styles.css
@@ -282,6 +282,137 @@ body {
     color: red;
 }
 
+/* PREVIEW PAGE STYLES */
+.preview-aside {
+    position: sticky;
+    top: 0;
+    width: 254px;
+    max-height: 1000px;
+    background-color: #ffffff;
+}
+.preview {
+    position: relative;
+    width: calc(100% - 560px);
+    padding: 0px 10px;
+}
+.preview__title {
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 23px;
+    text-decoration: underline;
+    text-transform: uppercase;
+    color: #FF0101;
+    margin-bottom: 20px;
+}
+.preview-aside__block {
+    display: flex;
+    align-items: flex-start;
+    color: #000000;
+    margin-bottom: 15px;
+    transition: all .3s linear;
+}
+.preview-aside__block:hover {
+    text-decoration: underline;
+}
+.preview-aside__block_full:hover {
+    text-decoration: none;
+}
+.preview-aside__image {
+    width: 75px;
+    height: 56px;
+    object-fit: cover;
+    margin-right: 15px;
+}
+.preview-aside__text {
+    padding-left: 5px;
+    line-height: 15px;
+}
+.preview-item {
+    position: relative;
+    display: block;
+    margin-bottom: 20px;
+    color: #ffffff;
+    font-weight: 700;
+    font-size: 25px;
+    line-height: 29px;
+}
+.preview-item::before {
+    content: '';
+    background-color: rgba(0, 0, 0, .3);
+    height: 100%;
+    position: absolute;
+    width: 100%;
+    top: 0;
+    left: 0;
+    z-index: 1;
+}
+.preview-item_full::before {
+    display: none;
+}
+.preview-item__image {
+    width: 100%;
+    height: 230px;
+    object-fit: cover;
+    display: block;
+}
+.preview-item__inner {
+    position: absolute;
+    bottom: 30px;
+    left: 15px;
+    padding-right: 30px;
+    z-index: 2;
+}
+.preview-item__title {
+    margin-bottom: 15px;
+}
+.preview-item__title_full {
+    color: #000000;
+    font-size: 20px;
+    margin-bottom: 15px;
+    line-height: 20px;
+}
+.preview-item__button {
+    background-color: #FF0000;
+    border-radius: 2px;
+    font-weight: 500;
+    font-size: 17px;
+    line-height: 20px;
+    padding: 10px;
+    text-transform: uppercase;
+    transition: all .3s linear;
+}
+.preview-item__button:hover {
+    background-color: #35ae35;
+}
+.preview__inner {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+.preview__block {
+    width: calc(100% / 3 - 15px);
+    color: #000000;
+    transition: all .3s linear;
+}
+.preview__block:hover {
+    text-decoration: underline;
+}
+.preview__block_full:hover {
+    text-decoration: none;
+}
+.preview__text {
+    padding-bottom: 10px;
+}
+.preview__block_second {
+    width: calc(100% / 4 - 15px);
+}
+.article {
+    margin-bottom: 30px;
+}
+.article__text {
+    margin-bottom: 15px;
+}
+
 /* FOOTER STYLES */
 .footer {
     padding: 20px;
@@ -295,6 +426,16 @@ body {
 }
 
 /* MEDIA QUERIES */
+@media (max-width: 1200px) {
+    .content {
+        padding: 0 10px;
+    }
+}
+@media (max-width: 1100px) {
+    .preview__text {
+        font-size: 14px;
+    }
+}
 @media (max-width: 1024px) {
     .item__first {
         width: 100%;
@@ -306,7 +447,6 @@ body {
     }
     .content {
         flex-wrap: wrap;
-        padding: 0 10px;
     }
     .content__inner {
         width: 100%;
@@ -330,6 +470,21 @@ body {
     .header {
         padding: 15px 5px;
     }
+    .preview-aside__text {
+        font-size: 14px;
+    }
+    .preview__block {
+        width: calc(100% / 2 - 15px);
+    }
+    .preview__block_second {
+        width: calc(100% / 3 - 15px);
+    }
+    .preview {
+        width: calc(100% - 470px);
+    }
+    .preview-aside {
+        width: 230px;
+    }
 }
 @media (max-width: 910px) {
     .menu {
@@ -346,6 +501,19 @@ body {
     }
     .menu__item {
         margin: 0 5px;
+    }
+    .preview {
+        width: 65%;
+        order: 2;
+    }
+    .preview-aside {
+        width: 35%;
+        max-height: 100%;
+        position: relative;
+        order: 1;
+    }
+    .preview-aside_second {
+        display: none;
     }
 }
 @media (max-width: 768px) {
@@ -375,6 +543,35 @@ body {
     }
     .content__title {
         margin-bottom: 10px;
+    }
+    .preview__title {
+        font-size: 17px;
+        margin-bottom: 13px;
+        line-height: 16px;
+    }
+    .preview-aside__image {
+        margin-right: 10px;
+    }
+    .preview-item {
+        font-size: 20px;
+        line-height: 22px;
+    }
+    .preview-item__button {
+        font-size: 14px;
+        line-height: 14px;
+        padding: 6px;
+    }
+}
+@media (max-width: 630px) {
+    .preview-aside {
+        display: none;
+    }
+    .preview {
+        width: 100%;
+        padding: 0;
+    }
+    .preview__block_second {
+        width: calc(100% / 2 - 15px);
     }
 }
 @media (max-width: 530px) {
@@ -426,5 +623,15 @@ body {
     }
     .header {
         padding: 5px;
+    }
+    .preview-item {
+        font-size: 18px;
+        line-height: 19px;
+    }
+    .preview-item__button {
+        font-size: 12px;
+    }
+    .preview__block {
+        width: 100%;
     }
 }
